# filetruck

./: Cargo.toml  README.md  common.yml
.github/workflows/: rust.yml
src/: commands.rs  drop_off.rs  error.rs  lib.rs  main.rs  ops.rs  pick_up.rs  plan.rs  printer.rs  truck_error.rs
test_data/: test.yml
tests/: commands_tests.rs  plan_tests.rs  util.rs
