[package]
name = "filetruck"
version = "0.1.0"
authors = ["Eamonn Laffey <eamonn.laffey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
serde = {version = "1.0.114", features = ["derive"]}
serde_yaml = "0.8.13"

